--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,4 @@
 body {
-  /* background-color: #6e4bb8; */
   background-image: url("../images/moto.jpg");
   min-height: 100vh;
   background-position: center;
@@ -7,6 +6,7 @@ body {
   background-repeat: no-repeat;
   color: white;
 }
+
 .overlay {
   background-color: rgba(50, 52, 87, 0.5);
   min-height: 100vh;
@@ -15,39 +15,26 @@ body {
   bottom: 0;
   position: absolute;
 }
-h1 {
-  margin-top: 4rem;
-}
-h4 {
-  margin-top: 2rem;
-  margin-bottom: 0;
-}
-ul {
-  list-style: none;
+
+.lista {
   margin-top: 1rem;
   border-top: 2px solid white;
+  list-style: none;
 }
-li {
+
+.tarefa {
   border-bottom: 1px solid white;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-i {
+
+.check-tarefa {
   float: right;
-  padding-left: 15px;
-}
-.iBtn {
-  float: none;
-  padding-left: 15px;
-}
-a.check-item {
   color: white;
 }
-a.check-item :hover {
+
+.check-tarefa :hover {
   color: tomato;
-}
-a.limpar {
-  text-decoration: none;
 }
 
 .done {
